--- a/src/css/homepage.module.css
+++ b/src/css/homepage.module.css
@@ -1,3 +1,9 @@
-.wrappper {
-    background: #FFFFFF ;
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    margin: auto;
+    padding-top: 64px;
 }
