--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   box-sizing: border-box;
 }
 
-html{
+html {
   font-family: 'Inter', sans-serif;
   font-weight: 500;
   font-size: 14px;
@@ -17,7 +17,7 @@ html{
 body {
   width: 100%;
   height: 100%;
-  background: #FFFFFF;
+  background: #fff;
 }
 
 img {
