--- a/src/css/contact.module.css
+++ b/src/css/contact.module.css
@@ -7,78 +7,112 @@
     margin: auto;
     padding: 64px 0 32px 0;
   }
-
-.container h2 {
-  font-weight: 600;
-  font-size: 36px;
-  line-height: 44px;
-  letter-spacing: -0.02em;
-  color: #101828;
-  margin-bottom: 16px;
-}
-
-.container p {
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 28px;
-  color: #475467;
-}
-
-.form {
-  width: 100%;
-  margin-top: 48px;
-}
-
-.inputContainer {
-  display: flex;
-  justify-content: left;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 6px;
-  margin-bottom: 24px;
-}
-
-.inputContainer label {
-font-weight: 500;
-color: #344054;
-}
-
-.inputContainer input {
-  width: 100%;
-  padding: 14px;
-  background: #fff;
-  border: 1px solid #d0d5dd;
-  box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
-  border-radius: 8px;
-  outline: none;
-}
-
-.checkbox input {
+  
+  .container h2 {
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 44px;
+    letter-spacing: -0.02em;
+    color: #101828;
+    margin-bottom: 16px;
+  }
+  
+  .container p {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 28px;
+    color: #475467;
+  }
+  
+  .form {
+    width: 100%;
+    margin-top: 48px;
+  }
+  
+  .inputContainer {
+    display: flex;
+    justify-content: left;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 6px;
+    margin-bottom: 24px;
+    width: 100%;
+  }
+  
+  .inputContainer label {
+    font-weight: 500;
+    color: #344054;
+  }
+  
+  .inputContainer input {
+    width: 100%;
+    padding: 14px;
+    background: #fff;
+    border: 1px solid #d0d5dd;
+    box-shadow: 0 1px 2px rgba(16, 24, 40, 0.05);
+    border-radius: 8px;
+    outline: none;
+  }
+  
+  .checkbox input {
+    -webkit-appearance: none;
     cursor: pointer;
+    width: 20px;
+    height: 20px;
+    outline: none;
+    background: #fff;
+    border: 1px solid #d0d5dd;
+    border-radius: 6px;
+  }
+  
+  .checked input {
+    position: relative;
+    background: #f9fafb;
+    cursor: pointer;
+    width: 20px;
+    height: 20px;
+    border: 1px solid #1570ef;
+    border-radius: 6px;
+  }
+  
+  .checked input::before {
+    content: "\2714";
+    font-size: 1rem;
+    color: #1570ef;
     position: absolute;
-    top: 0;
-    opacity: 0;
-    height: 0;
-    width: 0;
+    left: 3px;
+    top: -1px;
+  }
+  
+  .checkbox input:disabled {
+    background: #f2f4f7;
+    border: 1px solid #d0d5dd;
+  }
+  
+  .checkbox input:focus {
+    background: #fff;
+    border: 1px solid #84caff;
+    box-shadow: 0 0 0 4px #d1e9ff;
   }
   
   .inputContainer input:focus {
     border: 1px solid #84caff;
   }
-
-input::placeholder {
-  font-weight: 400;
-  font-size: 16px;
-  color: #667085;
-}
-
-.name {
+  
+  ::placeholder {
+    font-weight: 400;
+    font-size: 16px;
+    color: #667085;
+  }
+  
+  .name {
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
+    flex-direction: column;
   }
-
-.textarea {
+  
+  .textarea {
     padding: 12px 14px;
     width: 100%;
     height: 132px;
@@ -90,57 +124,42 @@ input::placeholder {
     line-height: 24px;
     color: #667085;
     outline: none;
-}
-
-.textarea:focus {
+  }
+  
+  .textarea:focus {
     border: 1px solid #84caff;
     box-shadow: 0 1px 2px rgba(16, 24, 40, 0.05), 0 0 0 4px #d1e9ff;
   }
-
-.conditions {
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  gap: 12px;
-  margin-top: 26px;
-  margin-bottom: 32px;
-}
-
-.checkbox {
+  
+  .conditions {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 12px;
+    margin-top: 26px;
+    margin-bottom: 32px;
+  }
+  
+  .checkbox {
     position: relative;
     cursor: pointer;
   }
   
   .checkbox label {
-    background: #fff;
-    border: 1px solid #d0d5dd;
-    border-radius: 6px;
-    width: 20px;
-    height: 20px;
-    bottom: 0;
+    opacity: 0;
+    width: 0;
+    height: 0;
+    position: absolute;
     display: block;
   }
   
-  .checkbox input {
-    cursor: pointer;
-    position: absolute;
-    top: 0;
-    opacity: 0;
-    height: 0;
-    width: 0;
+  .conditions span {
+    font-weight: 400;
+    font-size: 16px;
+    color: #475467;
   }
   
-  input:checked + label {
-    background: #1570ef;
-  }
-
-.conditions span {
-  font-weight: 400;
-  font-size: 16px;
-  color: #475467;
-}
-
-.submitButton {
+  .submitButton {
     padding: 12px 20px;
     background: #1570ef;
     border: 1px solid #1570ef;
@@ -152,9 +171,9 @@ input::placeholder {
     color: #fff;
     width: 100%;
     cursor: pointer;
-}
-
-.submitButton:hover {
+  }
+  
+  .submitButton:hover {
     background: #175cd3;
     border: 1px solid #175cd3;
   }
@@ -170,8 +189,8 @@ input::placeholder {
     border: 1px solid #b2ddff;
     box-shadow: 0 1px 2px rgba(16, 24, 40, 0.05);
   }
-
-@media only screen and (min-width: 768px) {
+  
+  @media only screen and (min-width: 768px) {
     .container {
       width: 50%;
     }
@@ -186,6 +205,7 @@ input::placeholder {
       display: flex;
       justify-content: space-between;
       align-items: flex-start;
+      flex-direction: row;
       gap: 24px;
     }
   
