--- a/src/css/contact.module.css
+++ b/src/css/contact.module.css
@@ -53,6 +53,18 @@
     border-radius: 8px;
     outline: none;
   }
+
+  .inputContainer small {
+    font-size: 14px;
+    line-height: 20px;
+    color: #f83f23;
+  }
+  
+  .textareaContainer small {
+    font-size: 14px;
+    line-height: 20px;
+    color: #f83f23;
+  }
   
   .checkbox input {
     -webkit-appearance: none;
